--- a/templates/base_tabs.html
+++ b/templates/base_tabs.html
@@ -2,7 +2,7 @@
 
 <div class="flex flex-wrap flex-row justify-between items-center pb-4">
 	<div class="text-3xl font-bold">Hi {{request.user}}!</div>
-	<div class="text-lg text-purple-600"><a href="/user/logout">Log out</a></div>
+	<div class="text-lg text-red-600"><a href="/user/logout">Log out</a></div>
 </div>
 
 <div class="text-xs text-gray-600 pb-3">
@@ -14,7 +14,7 @@
 
 <a href="/create-task/">
 	<button
-		class="bg-purple-500 hover:bg-purple-700 text-white font-medium py-2 px-4 rounded-md font-base text-center mt-3 w-full"
+		class="bg-red-500 hover:bg-red-700 text-white font-medium py-2 px-4 rounded-md font-base text-center mt-3 w-full"
 	>
 		Add
 	</button></a
