--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <br />
 <a href="/user/login/">
     <button
-        class="bg-purple-500 hover:bg-purple-700 text-white font-medium py-2 px-4 rounded-md font-base text-center mt-8 w-full"
+        class="bg-red-500 hover:bg-red-700 text-white font-medium py-2 px-4 rounded-md font-base text-center mt-8 w-full"
     >
         Login
     </button>
@@ -14,7 +14,7 @@
 <br />
 <a href="/user/signup/">
     <button
-        class="bg-purple-500 hover:bg-purple-700 text-white font-medium py-2 px-4 rounded-md font-base text-center mt-8 w-full"
+        class="bg-red-500 hover:bg-red-700 text-white font-medium py-2 px-4 rounded-md font-base text-center mt-8 w-full"
     >
         Signup
     </button>
