--- a/templates/task_create.html
+++ b/templates/task_create.html
@@ -36,7 +36,7 @@
                 {% csrf_token %}
                 {% comment %} <button type="submit" class="btn inline-block px-6 py-2 border-2 border-gray-600 text-gray-600 font-medium text-xs leading-tight uppercase rounded hover:bg-gray-800 hover:bg-opacity-5 focus:outline-none transition duration-150 ease-in-out" type="button" id="button-addon3">CREATE</button> {% endcomment %}
                 <a href="/create-task/">
-                    <button class="bg-purple-500 hover:bg-purple-700 text-white font-medium py-2 px-4 rounded-md font-base text-center mt-8 w-full">
+                    <button class="bg-red-500 hover:bg-red-700 text-white font-medium py-2 px-4 rounded-md font-base text-center mt-8 w-full">
                         Create
                     </button>
                 </a>
