--- a/templates/task_delete.html
+++ b/templates/task_delete.html
@@ -10,7 +10,7 @@
 		<input
 			type="submit"
 			value="confirm"
-			class="bg-purple-500 hover:bg-purple-700 text-white font-medium py-2 px-4 rounded-md font-base text-center mt-8 w-full"
+			class="bg-red-500 hover:bg-red-700 text-white font-medium py-2 px-4 rounded-md font-base text-center mt-8 w-full"
 		/>
 	</div>
 </form>
