--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -12,7 +12,7 @@
 	<li class="mr-2">
 		<a
 			href="/tasks/"
-			class="inline-block py-2 px-4 text-base font-semibold text-center text-purple-600 bg-purple-100 rounded-full active"
+			class="inline-block py-2 px-4 text-base font-semibold text-center text-red-600 bg-red-100 rounded-full active"
 			aria-current="page"
 			>Pending</a
 		>
@@ -52,14 +52,14 @@
 					pending
 				</p>
 			{% else %}
-				<p class="px-2 text-xs leading-5 font-semibold rounded-full bg-purple-100 text-purple-800">
+				<p class="px-2 text-xs leading-5 font-semibold rounded-full bg-red-100 text-red-800">
 					cancelled
 				</p>
 			{% endif %}
 			&nbsp;&nbsp;
 			<a
 				href="/delete-task/{{ task.id }}"
-				class="p-2 bg-purple-500 rounded-lg text-center text-white text-sm mr-2"
+				class="p-2 bg-red-500 rounded-lg text-center text-white text-sm mr-2"
 				><i class="fas fa-trash"></i
 			></a>
 			{% comment %} <a
